  - Fixed PC-98 keyboard handling of CTRL+A through
    CTRL+Z. CTRL+C now works correctly in PC-98 mode.
  - Fixed crash of Free Pascal compiler with dynamic
    core and setting "use dynamic core with paging on =
    auto" introduced in the previous version. (Wengier)
  - Fixed launching Windows programs when the working
    directory has no 8.3 filename entry. (Wengier)
  - Fixed an issue in MinGW builds that no data will be
    sent to the OPL3Duo board. (DhrBaksteen)
  - Fixed screen flickering when hovering over the menu
    with Direct3D output in the Windows SDL2 build that
    was introduced in the last version. (Wengier)
  - Fixed mounting disk/CD images with long paths from
    the "Drive" menu may not work properly. (Wengier)
  - Fixed that the "Save" button in Configuration Tool
    did not save config file in last version. (Wengier)
  - Integrated SVN commits (Allofich)
    - r4346: Fix a long-standing crash that occurred
    when disconnecting a second joystick after
    partially mapping it.
    - r4344: Add F8 to toggle printable characters on
    and off in the debugger.
    - r4340: Fix behavior when main memory allocation
    fails.
    - r4336: Correct an oversight of r4186 when floppy
    disks are mounted.
    - r4330: some big endian improvements and drive_fat
    fixes. (jmarsh)
    - r4320: Report Q-Channel track number in BCD,
    meaning it is not converted to binary by the
    CD-ROM device driver. Fixes the CD-Player feature
    of DOS Navigator 1.51 when playing past track 15.
    - r4318: Add LOGC debug command to log cs:ip only.
0.83.10
  - The Windows key(s) in Windows and the Command key(s)
    in macOS will now be displayed as the "Windows" and
    "Command" keys instead of the "super" and the "meta"
    keys in SDL1 builds just like SDL2 builds. (Wengier)
  - Cursor blinking rate for TrueType font (TTF) output
    can now be customized with the ttf.blinkc option.
    Set an integer between 1 (fastest) and 7 (slowest)