@@ -144,6 +144,8 @@
     auto" introduced in the previous version. (Wengier)
   - Fixed launching Windows programs when the working
     directory has no 8.3 filename entry. (Wengier)
+  - Fixed issues with full-screen switch in some cases
+    when the TrueType font output is enabled. (Wengier)
   - Fixed an issue in MinGW builds that no data will be
     sent to the OPL3Duo board. (DhrBaksteen)
   - Fixed screen flickering when hovering over the menu
